--- a/client/styles.css
+++ b/client/styles.css
@@ -1,40 +1,97 @@
-body {
-    height: 100vh; 
-    background: url(./assets/terra.jpg);
-    margin: 0; 
-    padding: 0;
+#gamesboard-container {
+    width: 500px;
+    display:flex;
+    justify-content: space-between; 
+}
+
+.game-board {
+    width: 200px;
+    height: 200px;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.block {
+    width: 20px;
+    height: 20px;
+
+}
+
+.option-container {
+    width: 500px;
+    height: 50px;
+    margin: 30px 0;
+    background-color: yellow;
+    display: flex;
     align-items: center;
 }
 
-main {
-    height: 100%;
-    max-height: 720px; 
-    max-width: 1080px; 
-    width: 100%;
-    background: url(./assets/agua.jpg) no-repeat;
-    border-radius: 50px;
+.cruiser {
+   background-color: blue;
 }
 
-#game {
-    display: grid;
-    place-items: center;
-    width: 100%;
-    height: 100%;
+.destroyer {
+    background-color: brown;
 }
 
-.grid {
-    display: grid;
-    grid-template-columns: repeat(10, auto);
-    grid-template-rows: repeat(10, auto);
+.battleship{
+    background-color: orange;
 }
 
-.cell {
-    width: 35px;
-    height: 35px;
-    border: 1px solid white;
-    display: grid;
-    place-items: center;
-    background-color: transparent;
+.carrier {
+    background-color: blue;
+}
+
+.submarine {
+    background-color: green;
+}
+.destroyer-preview {
+    width: 20px;
+    height: 10px;
+    margin: 3px;
+}
+
+.submarine-preview {
+    width: 30px;
+    height: 10px;
+    margin: 3px;
+}
+
+.cruiser-preview {
+    width: 30px;
+    height: 10px;
+    margin: 3px;
+}
+
+.battleship-preview {
+    width: 40px;
+    height: 10px;
+    margin: 3px;
+}
+
+.carrier-preview {
+    width: 50px;
+    height: 10px;
+    margin: 3px;
+}
+
+#computer .destroyer,
+#computer .submarine,
+#computer .cruiser,
+#computer .battleship,
+#computer .carrier {
+    background-color: pink;
+}
+
+
+.hover {
+    background-color: grey;
+}
+
+.boom {
+    background-color: red !important;
+}
+
+.empty {
+    background-color: grey !important;
 }
